项目初始化

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "edu-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "新版正方教务系统API",
   "private": true,
   "egg": {
     "declarations": true
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.10",
     "egg": "^2.15.1",
     "egg-scripts": "^2.11.0"
   },
