--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
     "egg": "^2.15.1",
-    "egg-scripts": "^2.11.0"
+    "egg-scripts": "^2.11.0",
+    "nwezf-rsa": "^1.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
